--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,11 +3,11 @@
 @tailwind utilities;
 
 h1 {
-  @apply text-4xl text-center mt-12 mb-5;
+  @apply text-4xl text-center mt-12;
 }
 
 h2 {
-  @apply text-3xl text-center m-3;
+  @apply text-3xl text-center m-2;
 }
 
 .link {
