add list of spots to map page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,3 +30,23 @@ tr {
 td {
   @apply p-1;
 }
+
+/* 
+Responsive iframe styling below from Ben Marhsall's tutorial:
+https://www.benmarshall.me/responsive-iframes/ 
+*/
+
+.iframe-container {
+  overflow: hidden;
+  padding-top: 56.25%;
+  position: relative;
+}
+
+.iframe-container iframe {
+  border: 0;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
