--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,11 +8,11 @@ body {
 }
 
 h1 {
-  @apply text-4xl text-center pt-28;
+  @apply text-4xl text-center mt-12 mb-8;
 }
 
 h2 {
-  @apply text-3xl text-center m-2;
+  @apply text-3xl text-center m-3;
 }
 
 .link {
